# backend/src/routes/appointmentsRoutes.js
@@ -1,0 +1,7 @@
+import express from 'express';
+import appointmentController from '../controllers/appointmentsController.js';
+
+const appointmentRoutes = express.Router();
+appointmentRoutes.get('', appointmentController.getAppointments);
+
+export default appointmentRoutes;
