# backend/src/routes/doctorRoutes.js
@@ -1,0 +1,5 @@
+import doctorController from "../controllers/doctorController.js";
+import express from 'express';
+const doctorRoutes = express.Router();
+doctorRoutes.get('/doctor-by-specialty', doctorController.getDoctorsBySpecialty);
+export default doctorRoutes;
