# backend/src/routes/specialtyRoutes.js
@@ -1,0 +1,8 @@
+import specialtyController from "../controllers/specialtyController.js";
+import express from 'express';
+
+const specialtyRoutes = express.Router();
+
+specialtyRoutes.get('', specialtyController.getAll);
+
+export default specialtyRoutes;
